/*
Copyright Â© 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbrole;

option go_package = "upms/proto/pbrole";

import "pbcommon/pbcommon.proto";
import "pbpermission/pbpermission.proto";


message RoleModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;

  int64 parentId = 4;
  string roleName = 5;
  int32  roleCode = 6;
  string roleDesc = 7;
  RoleType roleType = 8;
  int32  roleStatus = 9;
  repeated pbpermission.PermissionModel permissions = 10;
}

enum RoleType {
  ROLE_TYPE_NONE = 0;
  ADMIN = 1;
  APP = 2;
}

message FindRoleArgs{
  pbcommon.PageInfo pageInfo = 1;
  RoleModel query = 2;
}

message FindRoleReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  RoleModel data =3;
  repeated RoleModel list = 4;
  int64 total = 5;
}

service Role {
  rpc CreateRole(RoleModel) returns(pbcommon.CommonResult){}
  rpc UpdateRole(RoleModel) returns(pbcommon.CommonResult){}
  rpc DeleteRole(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindRoleById(pbcommon.IdArgs) returns(FindRoleReply){}
  rpc FindRoleList(FindRoleArgs) returns(FindRoleReply){}
}